# neural-net

./: Cargo.toml  README.md
examples/darknet53/: .gitignore  Cargo.toml  README.md  tensorflow-equivalent.py
examples/darknet53/src/: main.rs
examples/fashion-mnist/: .gitignore  Cargo.toml  README.md  tensorflow-equivalent.py
examples/fashion-mnist/src/: main.rs
src/: activations.rs  datasets.rs  graph.rs  initializers.rs  layers.rs  lib.rs  losses.rs  models.rs  util.rs
src/algebra/: add.rs  bias_add.rs  broadcast_to.rs  cmp.rs  constant.rs  conv2d.rs  div.rs  exp.rs  ln.rs  matmul.rs  matvecmul.rs  mod.rs  mul.rs  reduce_sum.rs  reshape.rs  softmax.rs  sqrt.rs  square.rs  sub.rs  sum.rs  ternary.rs  transpose.rs  unevaluable.rs  variable.rs
src/layers/: batch_normalization.rs  conv2d.rs  dense.rs  flatten.rs  global_average_pooling_2d.rs  lambda.rs  mod.rs  reshape.rs  residual.rs  sequential.rs
