[package]
name = "neural_net"
version = "0.1.0"
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.20"
simple-error = "0.2.1"
blas-src = { version = "0.2.1", default-features = false, features = ["accelerate"] }
ndarray = { version = "0.12.1", features = ["blas"] }
rand = "0.7.2"
byteorder = "1.3.2"
log = "0.4.8"
