[package]
name = "fashion-mnist"
version = "0.1.0"
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
edition = "2018"

[dependencies]
neural_net = { path = "../.." }
flate2 = "1.0.11"
blas-src = { version = "0.2.1", default-features = false, features = ["accelerate"] }
ndarray = { version = "0.12.1", features = ["blas"] }
log = "0.4.8"
env_logger = "0.7.0"
